Fixed caching of hidden tabs Stretch content to 100% height

--- a/src/components/layout/Apps/Workspace/Tabs.css
+++ b/src/components/layout/Apps/Workspace/Tabs.css
@@ -45,11 +45,17 @@
       overflow: hidden;
       background: #c6c6c6;  
       padding: 4px;
+      height: calc(100% - 35px);
   }
 
   .tab-child {    
     overflow: hidden;
+    background: white;
     width: 100%;
     height: 100%;
     position: relative;
+  }
+
+  .hidden {
+    display: none;
   }
